# ABSAC

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  fix_hd.py  fix_hd_append.py  phase0.xml  phase1.xml
sir/: Cargo.toml  README.md  goon_eval.txt
sir/crates/sir_analysis/: Cargo.toml
sir/crates/sir_analysis/src/: alias.rs  analysis.rs  cache.rs  constants.rs  dependency.rs  dominance.rs  escape.rs  facts.rs  graph.rs  lib.rs  loops.rs  manager.rs  purity.rs  ranges.rs  use_def.rs  value_numbering.rs
sir/crates/sir_analysis/src/tests/: integration.rs
sir/crates/sir_benchmarks/: Cargo.toml
sir/crates/sir_benchmarks/src/: lib.rs
sir/crates/sir_benchmarks/src/boolean_reductions/: mod.rs
sir/crates/sir_benchmarks/src/composition/: mod.rs
sir/crates/sir_benchmarks/src/failures/: bit_permutations.rs  composition.rs  mask_algebra.rs  mod.rs
sir/crates/sir_benchmarks/src/framework/: mod.rs
sir/crates/sir_benchmarks/src/graph/: mod.rs
sir/crates/sir_benchmarks/src/hackers_delight/: mod.rs  popcount.rs
sir/crates/sir_benchmarks/src/non_optimizable/: mod.rs
sir/crates/sir_benchmarks/src/positional_search/: mod.rs
sir/crates/sir_benchmarks/src/std/: mod.rs
sir/crates/sir_builder/: Cargo.toml
sir/crates/sir_builder/src/: builder.rs  error.rs  lib.rs
sir/crates/sir_generation/: Cargo.toml
sir/crates/sir_generation/src/: candidate.rs  generator.rs  lib.rs
sir/crates/sir_generation/src/generators/: arithmetic.rs  bit_iteration.rs  bitscan.rs  bitset.rs  mask_algebra.rs  mask_construction.rs  mod.rs  packed_bitfield.rs  popcount.rs
sir/crates/sir_generation/tests/: bs001_pipeline.rs  bs002_any_pipeline.rs  bs003_all_pipeline.rs  bs004_parity_pipeline.rs  generator.rs  generators.rs
sir/crates/sir_inference/: Cargo.toml
sir/crates/sir_inference/src/: engine.rs  evidence.rs  hypothesis.rs  lib.rs
sir/crates/sir_inference/src/sources/: arithmetic_evidence.rs  bitscan_evidence.rs  bitset_evidence.rs  mask_algebra_evidence.rs  mod.rs
sir/crates/sir_inference/tests/: ambiguity.rs  bitset_evidence.rs  engine.rs  negative.rs  types.rs
sir/crates/sir_nodes/: Cargo.toml
sir/crates/sir_nodes/src/: arena.rs  function.rs  lib.rs  module.rs  node.rs  node_kind.rs
sir/crates/sir_optimizer/: Cargo.toml
sir/crates/sir_optimizer/src/: config.rs  lib.rs  optimizer.rs  result.rs
sir/crates/sir_optimizer/tests/: arithmetic_identities_validation.rs  bitwise_arithmetic_validation.rs  boolean_reductions_boundaries.rs  boolean_reductions_validation.rs  bs001_optimizer.rs  optimizer_tests.rs  orchestration_validation.rs  positional_search_validation.rs  predicate_reductions_validation.rs  semantic_zoo.rs
sir/crates/sir_printer/: Cargo.toml
sir/crates/sir_printer/src/: json.rs  lib.rs  text.rs
sir/crates/sir_rewrite/: Cargo.toml
sir/crates/sir_rewrite/src/: builder.rs  detached_arena.rs  engine.rs  error.rs  lib.rs  local_id.rs  patch.rs  plan.rs  recipe.rs  region.rs  registry.rs  result.rs  subgraph_builder.rs
sir/crates/sir_rewrite/src/recipes/: all.rs  any.rs  bitscan_forward.rs  bitscan_reverse.rs  clear_lowest_set_bit.rs  divide_shift.rs  helpers.rs  leading_zero_count.rs  mod.rs  modulo_and.rs  multiply_shift.rs  parity.rs  popcount.rs  shift_mask.rs  trailing_zero_count.rs
sir/crates/sir_rewrite/tests/: integration_test.rs  popcount_type_test.rs
sir/crates/sir_selection/: Cargo.toml
sir/crates/sir_selection/src/: cost_model.rs  database.rs  lib.rs  score.rs  selector.rs
sir/crates/sir_semantics/: Cargo.toml
sir/crates/sir_semantics/src/: concepts.rs  cost.rs  cost_deriver.rs  lib.rs  region.rs  semantics.rs  structure.rs  truth.rs
sir/crates/sir_semantics/src/closure/: bitset_iteration.rs  mod.rs  predicate_map_to_seq.rs  rules.rs
sir/crates/sir_semantics/src/recognizers/: bitmask.rs  boolean_array.rs  boolean_collection.rs  cardinality_reduction.rs  conjunctive_reduction.rs  disjunctive_reduction.rs  divide_power_of_two.rs  element_sequence.rs  exclusive_reduction.rs  finite_collection.rs  is_zero.rs  loop_until_zero.rs  mask_algebra.rs  membership_traversal.rs  mod.rs  modulo_power_of_two.rs  multiply_power_of_two.rs  position_search.rs  predicate_collection.rs  predicate_map.rs  set_algebra.rs  shift_mask.rs
sir/crates/sir_semantics/tests/: recognizers.rs  semantic_database.rs  semantic_truth.rs
sir/crates/sir_tests/: Cargo.toml
sir/crates/sir_tests/src/: lib.rs
sir/crates/sir_tests/tests/: builder_integration.rs  module_integration.rs  positional_search_validation.rs  print_roundtrip.rs  regression.rs  verify_integration.rs
sir/crates/sir_transform/: Cargo.toml
sir/crates/sir_transform/src/: assumptions.rs  constraints.rs  context.rs  ids.rs  lib.rs  representation.rs  roles.rs  structures.rs
sir/crates/sir_transform/tests/: context_validation.rs
sir/crates/sir_types/: Cargo.toml
sir/crates/sir_types/src/: constant.rs  cost_profile.rs  effects.rs  lib.rs  metadata.rs  node_id.rs  region_id.rs  region_map.rs  span.rs  types.rs
sir/crates/sir_types/tests/: bitvector_test.rs
sir/crates/sir_verification/: Cargo.toml
sir/crates/sir_verification/src/: errors.rs  lib.rs  obligation.rs  registry.rs  report.rs  validation.rs
sir/crates/sir_verification/src/backends/: exhaustive.rs  mod.rs  symbolic.rs
sir/crates/sir_verification/src/definitions/: all.rs  any.rs  bitscan_forward.rs  bitscan_reverse.rs  clear_lowest_set_bit.rs  divide_shift.rs  leading_zero_count.rs  mod.rs  (+6 more)
sir/crates/sir_verification/tests/: bs001_verification.rs  manual_any_theorem.rs  negative_tests.rs  unknown_tests.rs
sir/crates/sir_verify/: Cargo.toml
sir/crates/sir_verify/src/: error.rs  lib.rs  verifier.rs
sir/docs/: 0000_vision.md  0001_semantic_ir.md  0002_type_system.md  0003_effect_system.md  0004_graph_invariants.md  0005_lowering.md  0006_equivalence.md  0007_rewrite_engine.md  0008_representation_inference.md  0009_cost_model.md  0010_semantic_representation_inference.md  0011_transformation_planning.md  dashboard.html
sir/docs/superpowers/plans/: 2026-07-03-sri-implementation.md  2026-07-03-transformation-planning.md
(+28 files in other folders)
