[workspace]
resolver = "2"
members = [
    "crates/sir_types",
    "crates/sir_nodes",
    "crates/sir_builder",
    "crates/sir_printer",
    "crates/sir_verify",
    "crates/sir_tests",
    "crates/sir_analysis",
    "crates/sir_semantics",
    "crates/sir_inference",
    "crates/sir_transform",
    "crates/sir_generation",
    "crates/sir_verification",
    "crates/sir_rewrite",
    "crates/sir_selection",
    "crates/sir_optimizer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Srihari <srihari@example.com>"]
