[package]
name = "sir_benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sir_types = { path = "../sir_types" }
sir_nodes = { path = "../sir_nodes" }
sir_builder = { path = "../sir_builder" }
sir_analysis = { path = "../sir_analysis" }
sir_semantics = { path = "../sir_semantics" }
sir_inference = { path = "../sir_inference" }
sir_transform = { path = "../sir_transform" }
sir_generation = { path = "../sir_generation" }
sir_verification = { path = "../sir_verification" }
sir_rewrite = { path = "../sir_rewrite" }
sir_selection = { path = "../sir_selection" }
sir_optimizer = { path = "../sir_optimizer" }
