[package]
name = "sir_generation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sir_transform = { path = "../sir_transform" }
sir_semantics = { path = "../sir_semantics" }

[dev-dependencies]
sir_inference = { path = "../sir_inference" }

[[test]]
name = "generator"
path = "tests/generator.rs"

[[test]]
name = "generators"
path = "tests/generators.rs"
