[package]
name = "sir_generation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sir_transform = { path = "../sir_transform" }
sir_semantics = { path = "../sir_semantics" }

[dev-dependencies]
sir_inference = { path = "../sir_inference" }
sir_builder = { path = "../sir_builder" }
sir_analysis = { path = "../sir_analysis" }
sir_nodes = { path = "../sir_nodes" }
sir_types = { path = "../sir_types" }

[[test]]
name = "generator"
path = "tests/generator.rs"

[[test]]
name = "generators"
path = "tests/generators.rs"

[[test]]
name = "bs001_pipeline"
path = "tests/bs001_pipeline.rs"
