[package]
name = "sir_generation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sir_types = { path = "../sir_types" }
sir_transform = { path = "../sir_transform" }
sir_semantics = { path = "../sir_semantics" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
sir_inference = { path = "../sir_inference" }
sir_builder = { path = "../sir_builder" }
sir_analysis = { path = "../sir_analysis" }
sir_nodes = { path = "../sir_nodes" }

[[test]]
name = "generator"
path = "tests/generator.rs"

[[test]]
name = "generators"
path = "tests/generators.rs"

[[test]]
name = "bs001_pipeline"
path = "tests/bs001_pipeline.rs"
