[package]
name = "sir_inference"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sir_semantics = { path = "../sir_semantics" }

[[test]]
name = "types"
path = "tests/types.rs"

[[test]]
name = "engine"
path = "tests/engine.rs"

[[test]]
name = "bitset_evidence"
path = "tests/bitset_evidence.rs"
