[package]
name = "sir_rewrite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sir_types = { path = "../sir_types" }
sir_nodes = { path = "../sir_nodes" }
sir_transform = { path = "../sir_transform" }
sir_generation = { path = "../sir_generation" }
sir_verification = { path = "../sir_verification" }
sir_verify = { path = "../sir_verify" }
sir_semantics = { path = "../sir_semantics" }

[dev-dependencies]
sir_builder = { path = "../sir_builder" }
