[package]
name = "sir_semantics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sir_types = { path = "../sir_types" }
sir_nodes = { path = "../sir_nodes" }
sir_analysis = { path = "../sir_analysis" }

[dev-dependencies]
sir_builder = { path = "../sir_builder" }
sir_inference = { path = "../sir_inference" }

[[test]]
name = "semantic_database"
path = "tests/semantic_database.rs"

[[test]]
name = "recognizers"
path = "tests/recognizers.rs"

[[test]]
name = "semantic_truth"
path = "tests/semantic_truth.rs"
