[package]
name = "sir_transform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sir_types = { path = "../sir_types" }
serde = { version = "1", features = ["derive"] }

[[test]]
name = "context_validation"
path = "tests/context_validation.rs"
