[package]
name = "sir_verification"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sir_types = { path = "../sir_types" }
sir_transform = { path = "../sir_transform" }
sir_generation = { path = "../sir_generation" }

[dev-dependencies]
sir_builder = { path = "../sir_builder" }
sir_nodes = { path = "../sir_nodes" }
sir_analysis = { path = "../sir_analysis" }
sir_semantics = { path = "../sir_semantics" }
sir_inference = { path = "../sir_inference" }
